[package]
name = "sla-model"
version = "0.1.0"
edition = "2021"

[dependencies]
curve25519-dalek = {version = "4.1.3", features = ["rand_core", "serde"] }
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"]}
serde_json = "1.0.128"
bulletproofs = "5.0.0"
bincode = "1.3.3"
tfhe = {version="0.7.3", features = ["integer"] }
